--- a/package.json
+++ b/package.json
@@ -25,16 +25,22 @@
   "dependencies": {
     "@angular/common": "^20.3.1",
     "@angular/compiler": "^20.3.1",
+    "@angular/cdk": "^20.2.4",
+    "@angular/material": "^20.2.4",
     "@angular/core": "^20.3.1",
     "@angular/forms": "^20.3.1",
     "@angular/platform-browser": "^20.3.1",
+    "@angular/elements": "^20.3.1",
     "@angular/router": "^20.3.1",
+    "@ctrl/ngx-emoji-mart": "^9.3.0",
+    "marked": "^16.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-eslint/eslint-plugin": "^20.2.0",
+    "@webcomponents/custom-elements": "^1.6.0",
     "@angular-eslint/eslint-plugin-template": "^20.2.0",
     "@angular/build": "^20.3.1",
     "@angular/cli": "^20.3.1",
