--- a/angular.json
+++ b/angular.json
@@ -44,16 +44,8 @@
           "configurations": {
             "production": {
               "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
-                },
-                {
-                  "type": "anyComponentStyle",
-                  "maximumWarning": "4kB",
-                  "maximumError": "8kB"
-                }
+                { "type": "initial", "maximumWarning": "1mb", "maximumError": "1.5mb" },
+                { "type": "anyComponentStyle", "maximumWarning": "32kb", "maximumError": "64kb" }
               ],
               "outputHashing": "all"
             },
