--- a/nginx.conf
+++ b/nginx.conf
@@ -5,15 +5,22 @@ server {
   root /usr/share/nginx/html;
   index index.html;
 
+  # Cache hashed assets
+  location ~* \.(?:js|css|png|jpg|jpeg|gif|svg|ico)$ {
+    try_files $uri =404;
+    add_header Cache-Control "public, max-age=31536000, immutable";
+  }
+
+  # Don't cache the SPA shell
+  location = /index.html {
+    add_header Cache-Control "no-store";
+  }
+
   # SPA fallback
   location / {
     try_files $uri $uri/ /index.html;
   }
 
-  # Proxy API to backend container (compose service name)
-  location /api/ {
-    proxy_pass http://backend:8080/api/;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-  }
+  # CORS for module script if you need it
+  add_header Cross-Origin-Resource-Policy cross-origin always;
 }
