--- a/nginx.site.conf
+++ b/nginx.site.conf
@@ -20,11 +20,11 @@ server {
   }
 
   # Static assets
-  location ~* \.(?:png|jpg|jpeg|gif|svg|ico|txt|json)$ {
+  location ~* \.(?:png|jpe?g|gif|svg|ico|txt|json)$ {
     try_files $uri =404;
     add_header Cache-Control "public, max-age=31536000, immutable";
   }
 
-  # SPA fallback (useful if you open / directly in a browser)
+  # SPA fallback (only if you browse / directly)
   location / { try_files $uri $uri/ /index.html; }
 }
